# nanosandbox

./: .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  TODO.md
benches/: sandbox_bench.rs
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  platform-linux.md  platform-macos.md  platform-windows.md
examples/: agent_preset.rs  code_judge.rs  demo.rs  network_allow.rs
src/: builder.rs  error.rs  lib.rs  result.rs  sandbox.rs
src/network/: manager.rs  mod.rs  proxy.rs
src/platform/: mod.rs
src/platform/linux/: cgroup.rs  mod.rs  namespace.rs  seccomp.rs
src/platform/macos/: mod.rs
src/platform/windows/: mod.rs
tests/: integration.rs  integration_test.rs  security.rs
tests/integration/: basic_exec.rs  concurrency.rs  error_handling.rs  observability.rs  proxy_advanced.rs  resource_limits.rs
tests/security/: escape_attempts.rs  network_security.rs  process_management.rs  resource_enforcement.rs  resource_exhaustion.rs  sbpl_rules.rs  syscall_filter.rs
