[package]
name = "nanosandbox"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lightweight cross-platform sandbox for secure code execution"
keywords = ["sandbox", "container", "security", "isolation", "cross-platform"]
categories = ["os::linux-apis", "development-tools"]
repository = "https://github.com/Erio-Harrison/nanosandbox"

[dependencies]
# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (for HTTP proxy)
tokio = { version = "1.0", features = ["net", "io-util", "rt-multi-thread", "sync", "macros", "time"] }

[target.'cfg(unix)'.dependencies]
# Unix syscalls
nix = { version = "0.31", features = ["sched", "mount", "signal", "user", "fs", "hostname", "process", "net"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Windows API
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_Security", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sandbox_bench"
harness = false
